# semver-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
.vim/: coc-settings.json
src/: cli.yml  main.rs
