[package]
name = "semver-cli"
version = "0.1.5"
authors = ["rickycodes <ricky.miller@gmail.com>", "pSox <pSox(a)st8l.com>"]
edition = "2021"
description = "A Rust CLI application for working with the semver specification"
license = "MIT"
repository = "https://github.com/dolysis/semver-cli"
readme = "README.md"
keywords = ["semver", "cli"]

[dependencies]
clap = {version = "2", features = ["yaml"]}
semver = "1"

